@@ -1,3 +1,8 @@
+Sun Dec 14 20:43:47 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/CodeGenerator.java
+	  (compileFunctionBody): remove bp from saveRegs first.
+
 Mon Dec  8 00:55:33 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* lib/alloca.s: alloca() implemeted.
